Fixing button and default button and normal input z-index

--- a/src/Components/Inputs/DefaultButton/default_button.module.scss
+++ b/src/Components/Inputs/DefaultButton/default_button.module.scss
@@ -36,7 +36,7 @@
             border-radius: 5px;
             transition: 0.2s;
             &:hover, &:focus {
-                opacity: 0.9;
+                background-color: $ligther-primary-color;
                 letter-spacing: 3px;
             }
             @include disabled-button();
