--- a/src/Components/Inputs/DefaultInput/default_input.module.scss
+++ b/src/Components/Inputs/DefaultInput/default_input.module.scss
@@ -23,7 +23,9 @@
     }
 
     &__input[type=checkbox] {
+        
         transform: scale(1.8);
+
         width: 10px;
         height: 10px;
         margin-left: 15px;
@@ -50,14 +52,12 @@
         &:hover, &:focus {
             background: linear-gradient(to bottom, white 50%, #d1d1d1);
             outline: 1px solid $primary-color;
-            z-index: 0;
         }
 
         &:disabled {
             box-shadow: inset 0px 0px 10px $shadow-color;
             background: #cccccc;
             color: black;
-            z-index: 0;
             &::placeholder {
                 color: black;
             }
