--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -1,6 +1,7 @@
 /* Colors */
 
 $primary-color: #D12632;
+$ligther-primary-color: #e03434;
 
 $light-color: #EEECED;
 $dark-color: #464646;
